--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">20</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">19</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">javaBasic.Topic_07_Array</td><td><a href="#m0">TC_01_Tim_So_Lon_Nhat_Trong_Mang</a></td><td rowspan="1">1663603154544</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_Sum_First_Number_And_Last_Number</a></td><td rowspan="1">1663603154550</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Tinh_Tong_Va_Trung_Binh_Cong</a></td><td rowspan="1">1663603154552</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">javaBasic.Topic_08_String</td><td><a href="#m0">TC_01_Example</a></td><td rowspan="1">1663607829400</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">javaBasic.Topic_07_Array#TC_01_Tim_So_Lon_Nhat_Trong_Mang</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">javaBasic.Topic_07_Array#TC_02_Sum_First_Number_And_Last_Number</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">javaBasic.Topic_07_Array#TC_03_Tinh_Tong_Va_Trung_Binh_Cong</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">javaBasic.Topic_08_String#TC_01_Example</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
