--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1957424121\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1392348185\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="javaBasic.Topic_07_Array" class="method navigator-link" hash-for-method="TC_01_Tim_So_Lon_Nhat_Trong_Mang">TC_01_Tim_So_Lon_Nhat_Trong_Mang</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="javaBasic.Topic_07_Array" class="method navigator-link" hash-for-method="TC_02_Sum_First_Number_And_Last_Number">TC_02_Sum_First_Number_And_Last_Number</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="javaBasic.Topic_07_Array" class="method navigator-link" hash-for-method="TC_03_Tinh_Tong_Va_Trung_Binh_Cong">TC_03_Tinh_Tong_Va_Trung_Binh_Cong</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="javaBasic.Topic_08_String" class="method navigator-link" hash-for-method="TC_01_Example">TC_01_Example</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">javaBasic.Topic_07_Array</span>
+              <span class="class-name">javaBasic.Topic_08_String</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Tim_So_Lon_Nhat_Trong_Mang">
-                  </a> <!-- TC_01_Tim_So_Lon_Nhat_Trong_Mang -->
-                  <span class="method-name">TC_01_Tim_So_Lon_Nhat_Trong_Mang</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_Sum_First_Number_And_Last_Number">
-                  </a> <!-- TC_02_Sum_First_Number_And_Last_Number -->
-                  <span class="method-name">TC_02_Sum_First_Number_And_Last_Number</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_Tinh_Tong_Va_Trung_Binh_Cong">
-                  </a> <!-- TC_03_Tinh_Tong_Va_Trung_Binh_Cong -->
-                  <span class="method-name">TC_03_Tinh_Tong_Va_Trung_Binh_Cong</span>
+                  <a name="TC_01_Example">
+                  </a> <!-- TC_01_Example -->
+                  <span class="method-name">TC_01_Example</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1957424121\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1392348185\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;javaBasic.Topic_07_Array&quot;/&gt;
+      &lt;class name=&quot;javaBasic.Topic_08_String&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_Tim_So_Lon_Nhat_Trong_Mang')
-data.setCell(0, 2, 'javaBasic.Topic_07_Array')
+data.setCell(0, 1, 'TC_01_Example')
+data.setCell(0, 2, 'javaBasic.Topic_08_String')
 data.setCell(0, 3, 5);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_02_Sum_First_Number_And_Last_Number')
-data.setCell(1, 2, 'javaBasic.Topic_07_Array')
-data.setCell(1, 3, 1);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_03_Tinh_Tong_Va_Trung_Binh_Cong')
-data.setCell(2, 2, 'javaBasic.Topic_07_Array')
-data.setCell(2, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 ms</span>
+              <span class="suite-total-time">Total running time: 5 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,18 +219,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">javaBasic.Topic_07_Array</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">javaBasic.Topic_08_String</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">TC_01_Tim_So_Lon_Nhat_Trong_Mang</span>
+                <span class="method-name">TC_01_Example</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_Sum_First_Number_And_Last_Number</span>
-                <span class="method-start">6 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_Tinh_Tong_Va_Trung_Binh_Cong</span>
-                <span class="method-start">8 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
