--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6eb4b4">  <td>22/09/19 22:59:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_Array.TC_01_Tim_So_Lon_Nhat_Trong_Mang()[pri:0, instance:javaBasic.Topic_07_Array@5bda8e08]">TC_01_Tim_So_Lon_Nhat_Trong_Mang</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/19 22:59:14</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_Array.TC_02_Sum_First_Number_And_Last_Number()[pri:0, instance:javaBasic.Topic_07_Array@5bda8e08]">TC_02_Sum_First_Number_And_Last_Number</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/19 22:59:14</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_Array.TC_03_Tinh_Tong_Va_Trung_Binh_Cong()[pri:0, instance:javaBasic.Topic_07_Array@5bda8e08]">TC_03_Tinh_Tong_Va_Trung_Binh_Cong</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
+<tr bgcolor="6eb4b4">  <td>22/09/20 00:17:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_08_String.TC_01_Example()[pri:0, instance:javaBasic.Topic_08_String@233795b6]">TC_01_Example</td> 
+  <td>main@422330142</td>   <td></td> </tr>
 </table>
