--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:48:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_01_Register_Login_Apply_BasePage_1.beforeClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:02</td>   <td>3923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_01_Register_Empty_Data</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_02_Register_Invalid_Email</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_03_Register_Success</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_04_Register_Existing_Email</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_05_Register_Password_Less_Than_6_Chars</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Apply_BasePage_1.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">TC_06_Register_Invalid_Confirm_Password</td> 
-  <td>main@960733886</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/26 15:49:15</td>   <td>17186</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;User_01_Register_Login_Apply_BasePage_1.afterClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Apply_BasePage_1@609cd4d8]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@960733886</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:31:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_01_Register_Login_Use_BaseTest3.beforeClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:31:59</td>   <td>4056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_01_Register_Empty_Data</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:01</td>   <td>5593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_02_Register_Invalid_Email</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:01</td>   <td>6380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_03_Register_Success</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:04</td>   <td>8402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_04_Register_Existing_Email</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:04</td>   <td>9286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_05_Register_Password_Less_Than_6_Chars</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:05</td>   <td>10035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_06_Register_Invalid_Confirm_Password</td> 
+  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:06</td>   <td>11253</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;User_01_Register_Login_Use_BaseTest3.afterClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016363973</td>   <td></td> </tr>
 </table>
