--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:31:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_01_Register_Empty_Data</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:01</td>   <td>1537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_02_Register_Invalid_Email</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:01</td>   <td>2324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_03_Register_Success</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:04</td>   <td>4346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_04_Register_Existing_Email</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:04</td>   <td>5230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_05_Register_Password_Less_Than_6_Chars</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:05</td>   <td>5979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login_Use_BaseTest3.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">TC_06_Register_Invalid_Confirm_Password</td> 
-  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:32:06</td>   <td>7197</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;User_01_Register_Login_Use_BaseTest3.afterClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016363973</td>   <td></td> </tr>
-<tr bgcolor="9f7dcf">  <td>22/09/26 22:31:55</td>   <td>-4056</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_01_Register_Login_Use_BaseTest3.beforeClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login_Use_BaseTest3@5aebe890]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1016363973</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_01_Register_Empty_Data</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_02_Register_Invalid_Email</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_03_Register_Success</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_04_Register_Existing_Email</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_05_Register_Password_Less_Than_6_Chars</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_06_Register_Invalid_Confirm_Password</td> 
+  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>7994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_03_User_01_Register_Login_Use_Page_Obj.afterClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/09/28 15:09:08</td>   <td>-4064</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_03_User_01_Register_Login_Use_Page_Obj.beforeClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@8805846</td>   <td></td> </tr>
 </table>
