--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_03_User_01_Register_Login_Use_Page_Obj.beforeClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:12</td>   <td>4064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_01_Register_Empty_Data</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>11976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_02_Register_Invalid_Email</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>12011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_03_Register_Success</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>12021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_04_Register_Existing_Email</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>12034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_05_Register_Password_Less_Than_6_Chars</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>12046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_01_Register_Login_Use_Page_Obj.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">TC_06_Register_Invalid_Confirm_Password</td> 
-  <td>main@8805846</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/09/28 15:09:20</td>   <td>12058</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_03_User_01_Register_Login_Use_Page_Obj.afterClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj@10d68fcd]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@8805846</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_03_User_02_Login_Use_Page_Obj.beforeClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:05</td>   <td>7928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_01_Empty_Data</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:05</td>   <td>8718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_02_Invalid_Email</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:06</td>   <td>9382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_03_Not_Found_Email</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:07</td>   <td>10174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:08</td>   <td>10988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:08</td>   <td>11763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_03_User_02_Login_Use_Page_Obj.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">Login_06_Valid_Email_Password</td> 
+  <td>main@1878169648</td>   <td></td> </tr>
+<tr bgcolor="9f7dcf">  <td>22/10/03 22:26:09</td>   <td>12889</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_03_User_02_Login_Use_Page_Obj.afterClass()[pri:0, instance:com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj@45c7e403]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878169648</td>   <td></td> </tr>
 </table>
