--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,34 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_03_User_01_Register_Login_Use_Page_Obj</td>
+<td>com.nopcommerce.user.Level_03_User_02_Login_Use_Page_Obj</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_03_Register_Success</td>
+<td>Login_05_Existing_Email_Wrong_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_04_Register_Existing_Email</td>
+<td>Login_03_Not_Found_Email</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_05_Register_Password_Less_Than_6_Chars</td>
+<td>Login_01_Empty_Data</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Register_Empty_Data</td>
+<td>Login_04_Existing_Email_Empty_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_02_Register_Invalid_Email</td>
+<td>Login_06_Valid_Email_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_06_Register_Invalid_Confirm_Password</td>
+<td>Login_02_Invalid_Email</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
