--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_01_Register_Empty_Data()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_01_Register_Empty_Data</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:55</td>   <td>870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_02_Register_Invalid_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_02_Register_Invalid_Email</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:56</td>   <td>1618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_03_Register_Success()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_03_Register_Success</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:57</td>   <td>3502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_04_Register_Existing_Email()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_04_Register_Existing_Email</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:58</td>   <td>4391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_05_Register_Password_Less_Than_6_Chars()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_05_Register_Password_Less_Than_6_Chars</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:59</td>   <td>5110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_01_Register_Login.TC_06_Register_Invalid_Confirm_Password()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">TC_06_Register_Invalid_Confirm_Password</td> 
-  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:26:00</td>   <td>6282</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;User_01_Register_Login.afterClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1112414583</td>   <td></td> </tr>
-<tr bgcolor="6eb4b4">  <td>22/09/22 22:25:50</td>   <td>-3855</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_01_Register_Login.beforeClass()[pri:0, instance:com.nopcommerce.user.User_01_Register_Login@49438269]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1112414583</td>   <td></td> </tr>
+<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_01_Register</td> 
+  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_02_Login</td> 
+  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_03_My_Account</td> 
+  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_04_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_04_Switch_Page</td> 
+  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_05_Switch_Role()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_05_Switch_Role</td> 
+  <td>main@815320891</td>   <td></td> </tr>
 </table>
