--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,52 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:49</td>   <td>8941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_01_Empty_Data</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:50</td>   <td>10162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_02_Invalid_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:51</td>   <td>10965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_03_Not_Found_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:52</td>   <td>12062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:54</td>   <td>14120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:55</td>   <td>15505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_06_Valid_Email_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:57</td>   <td>17013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:11:58</td>   <td>17822</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:08</td>   <td>27914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_01_Empty_Data</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:09</td>   <td>28983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_02_Invalid_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:10</td>   <td>29885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_03_Not_Found_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:11</td>   <td>31098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:12</td>   <td>32524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:14</td>   <td>34008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_06_Valid_Email_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:17</td>   <td>37289</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:12:17</td>   <td>37481</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:00</td>   <td>80105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_01_Empty_Data</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:01</td>   <td>81120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_02_Invalid_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:02</td>   <td>82108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_03_Not_Found_Email</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:03</td>   <td>83516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:05</td>   <td>85184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:07</td>   <td>86813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_06_Valid_Email_Password</td> 
-  <td>main@324457684</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/10/11 15:13:09</td>   <td>88916</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_07_Switch_Page.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:25</td>   <td>5181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">User_01_Register</td> 
+  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:29</td>   <td>9103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">User_02_Login</td> 
+  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:31</td>   <td>11866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">User_03_My_Account</td> 
+  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:32</td>   <td>12376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_04_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">User_04_Switch_Page</td> 
+  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:32</td>   <td>12377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_05_Switch_Role()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">User_05_Switch_Role</td> 
+  <td>main@1050065615</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/10/11 21:50:32</td>   <td>12378</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_07_Switch_Page.afterClass()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@2df3b89c]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1050065615</td>   <td></td> </tr>
 </table>
